# Research

./: .gitignore  SETUP.md  paper.md
.agent/workflows/: version-policy.md
evaluation_plan/: AUDIT.md  STATUS.md  config.yaml  experiment_design.md  hello.md  question_generation_framework.md  question_generation_prompts.md  run_all.sh  steps.md  supervisor.sh
evaluation_plan/output/: final_manifest.json  (+1 more)
pipeline/: .env.example  .gitignore  pyproject.toml  run_all.py  run_pipeline.sh
pipeline/src/: __init__.py  accelerators.py  config.py  export_final.py  orchestrator.py  resume_pipeline.py  resume_stage3.py  schemas.py  seed_bank.py  tools.py
pipeline/src/stages/: __init__.py  post_difficulty.py  post_pipeline.py  post_resolution.py  stage1_seeds.py  stage2_5_research.py  stage2_proto_questions.py  stage3_refinement.py  stage4_verification.py  stage5_dedup.py  stage5_dedup_balance.py
pipeline/tests/: test_accelerators.py  test_merger.py  test_stage1_smoke.py  test_stage2_proto.py
research/: domain1_political_decision_theory.md  domain2_leader_profiling.md  domain3_scoring_calibration.md  domain4_benchmarks_superforecasting.md  domain5_analogous_domains_persona.md  meta_analysis_research_domains.md
temporal_knowledge_base/: .env.example  .gitignore  HOW_IT_WORKS.md  SYSTEM_DESIGN.md  pyproject.toml
temporal_knowledge_base/build_prompts/: 01_coordinator.md  02_discovery.md  03_extraction.md  04_cleaning.md  05_temporal_validator.md  06_indexing.md  07_coverage_auditor.md  08_pipeline.md  09_neon_setup.md  10_verification.md  README.md
temporal_knowledge_base/src/: __init__.py  __main__.py  checkpoint.py  config.py  database.py  embeddings.py  models.py  pipeline.py  resilience.py  retrieval.py
temporal_knowledge_base/src/agents/: __init__.py  cleaning.py  coordinator.py  coverage_auditor.py  discovery.py  extraction.py  indexing.py  temporal_validator.py
temporal_knowledge_base/src/tests/: test_checkpoint.py  test_resilience.py  test_retrieval.py
(+331 files in other folders)
